# sticker0

./: CLAUDE.md  README.md  main.py  pyproject.toml
.sticker0/: f5ae8636-cc39-44a8-8eb2-4e4cbd5d02bf.json  settings.toml
docs/: PLAN.md  SPEC.md  UPDATE_1_ASK.md  UPDATE_1_PLAN.md  UPDATE_1_SPEC.md  UPDATE_2_PLAN.md  UPDATE_2_SPEC.md  index.html  style.css
docs/ask/: 2026-04-06-stakeholder-notes-v0.3.md
docs/features/sticker-copy-paste/: 2026-04-07-implementation-plan.md
docs/plan/: 2026-04-06-implementation-plan-v0.3.md
docs/requirements/: sticker-copy-paste.md
docs/spec/: 2026-04-06-change-spec-v0.2-to-v0.3.md
docs/superpowers/plans/: 2026-04-07-workspace-mode.md
history/plan/: 2026-04-06-implementation-plan-v0.2.md  2026-04-07-border-customization.md
history/spec/: 2026-04-06-change-spec-v0.1-to-v0.2.md  2026-04-06-product-spec.md
src/sticker0/: CLAUDE.md  app.py  config.py  main.py  presets.py  sticker.py  storage.py  system_clipboard.py
src/sticker0/widgets/: CLAUDE.md  board.py  board_menu.py  border_picker.py  color_picker.py  context_menu.py  menu_button.py  picker_labels.py  popup_geometry.py  preset_picker.py  sticker_widget.py  theme_picker.py
tests/: test_app.py  test_config.py  test_main.py  test_popup_geometry.py  test_presets.py  test_sticker.py  test_storage.py  test_system_clipboard.py
