[project]
name = "sticker0"
version = "0.4.0"
description = "Terminal sticky notes"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "textual>=0.80",
    "pyperclip>=1.8",
]

[project.scripts]
stk = "sticker0.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sticker0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]
